Fixed the footer on mobile pt.2

--- a/css/variables.css
+++ b/css/variables.css
@@ -22,11 +22,6 @@ body {
         color 0.4s ease;
 }
 
-body::after {
-    content: "";
-    flex: 1;
-}
-
 .footer {
     margin-top: auto;
 }
